# Monitoring-Boi

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
service/: monboi  monboi.conf
src/: main.rs
