[package]
name = "monboi"
version = "0.1.0"
authors = ["Benjamin Richner"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"

[dependencies]
inotify = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
lettre = "0.9"
lettre_email = "0.9"
sys-info = "0.5"
log = "0.4"
simple_logger = "1.3"